# Limited-TNiC

./: .clang-format  .gitattributes  .gitignore  README.md  meson.build
src/: application.h  database.h  embeds.c  embeds.h  error.h  main.c  music.c  music.h  playlist.c  playlist.h  rustvibes.h  struct.h
